css/style.css
:root{
    --color--fondo: #062373;
}


body {
    color: white;
    margin: 0;
    background: var(--color--fondo);
}

header{
    display: grid;
    background: var(--color--fondo);
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: 80px;
    text-align: center;
    align-items: center;
}
header>div>a{
    color: white;
    text-decoration: none;
}
.imgPrincipal{
   width: 99vw;
   display: grid;
   grid-template-columns: 99vw;
   grid-template-rows: auto auto;
}
.imgPrincipal > div > img{
    width: 99vw;
    height: auto;
}

.imgPrincipal div:first-child{
    grid-column: 1 / 2;
    grid-row: 1 / 2;
}
.imgPrincipal div:nth-child(2){
    grid-column: 1 / 2;
    grid-row: 1 / 2;
    text-align: center;
    color: white;
    padding: 5%;
}

.MedicamentosTitle{
    display: grid;
    /* grid-template-columns: 5fr 1fr; */
    grid-template-columns: 1fr;
    grid-template-rows: 2.5vh;
    margin: 2%;
    align-items: center;
}
/* .textoPrincipal h1{
    text-align: center;
    color: white;
    font-size: clamp(7rem, 7vw, 3rem);;
}
.textoPrincipal h2{
    text-align: center;
    color: white;
    font-size: clamp(1rem, 5vw, 3rem);;
} */
.categorias{
    margin-left: auto;
    width: auto;
    color: white;
    background-color: #3858c6;
    border: none;
    outline: none;
    font-size: 1.5rem;
}

.medicamentos{
    padding: 20px;
    display: grid;
    grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
    gap: 16px;
    max-width: 1200px;
    margin: 0 auto;
    /* background-color:#3858c6; */
}
.medicamento-tarjetas{
    border-radius: 8px;
    background-color: #3858c6;
}

.imgMedicamento{
    margin-top: 10px;
    width: 90%;
    height: auto;
    border-radius: 8px;
}
.medicamento-tarjetas h3{
    padding: 4px;
}
.medicamento-tarjetas h5{
    padding-left: 15px;
    padding-right: 15px;
}
.medicamento-tarjetas p{
    padding-left: 15px;
    padding-right: 15px;
    text-align: justify;
}
.quienesSomos{
    padding: 20px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto auto;
    gap: 30px;
    max-width: 800px;
    margin: 0 auto;
    /* background-color: rgb(81, 81, 239); */
}
.historia{
    background-color: #3858c6;
    max-width: 800px;
}
.historia h2{
    text-align: center;
    margin: 20px;
}
.historia p{
    margin: 20px;
    text-align: justify;
}
.informacion{
    background-color: #3858c6;
    max-width: 800px;
}
.informacion h2{
    text-align: center;
    margin: 20px;
}
.informacion p{
    margin: 20px;
    text-align: justify;
}

.logo-empresa{
    width: 100%;
    height: auto;
}
.container-logo{
    background-color:#3858c6;
    grid-column-start: 1;
    grid-column-end: 3;
    text-align: center;
}
footer{
    background-color: #5149eb;
    padding: 20px;
    display: grid;
    grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
    gap: 16px;
    max-width: 100vw;
    margin: 0 auto;
}
footer > div{
    justify-content: center;
    align-items: center;
    text-align: center;
}

